--- a/Solution/FastWorkspace.Client/_Imports.razor
+++ b/Solution/FastWorkspace.Client/_Imports.razor
@@ -16,6 +16,8 @@
 @using FastWorkspace.Client.Shared.Organisms
 @using FastWorkspace.Client.Shared.Layouts
 
+@using FastWorkspace.Client.Locales
+
 @using FastWorkspace.Domain.Enums
 @using FastWorkspace.Domain.Model
 @using FastWorkspace.Domain.Model.Jobs
