fix and start view workspace

--- a/Solution/FastWorkspace.Client/Pages/Configuration/ConfigurationPage.razor
+++ b/Solution/FastWorkspace.Client/Pages/Configuration/ConfigurationPage.razor
@@ -8,7 +8,7 @@
 @inject IWorkspaceStore WorkspaceStore
 @inject IAppConfiguration AppConfiguration
 @inject NavigationManager Navigation
-@inject IStringLocalizer<AppLocales> Localize
+@inject IStringLocalizer<ConfigurationPageLocales> Localize
 @inject ApplicationEventManager EventManager
 
 @attribute [Route(Routes.ConfigurationPage)]
