--- a/Solution/ActivityLauncher.Client/Pages/Index.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Index.razor
@@ -4,7 +4,7 @@
 
 @if (AppConfiguration.IsAppReady())
 {
-    <Redirect Url="@Routes.DashboardPage" />
+    <Redirect Url="@Routes.ActivitiesPage" />
 }
 else
 {
