--- a/Solution/ActivityLauncher.Client/_Imports.razor
+++ b/Solution/ActivityLauncher.Client/_Imports.razor
@@ -20,7 +20,7 @@
 
 @using ActivityLauncher.Domain.Enums
 @using ActivityLauncher.Domain.Model
-@using ActivityLauncher.Domain.Model.Jobs
+@using ActivityLauncher.Domain.Model.Tasks
 @using ActivityLauncher.Domain.Model.Terminal
 @using ActivityLauncher.Domain.Services
 @using ActivityLauncher.Domain.Services.Declarations
