--- a/Solution/ActivityLauncher.Client/Shared/Layouts/MainLayout.razor
+++ b/Solution/ActivityLauncher.Client/Shared/Layouts/MainLayout.razor
@@ -6,7 +6,7 @@
     @if (AppConfiguration.IsAppReady())
     {
         <MudDrawer Open>
-            <MudText Typo="Typo.h6" Align="Align.Center" Class="mt-4">Fast Workspace</MudText>
+            <MudText Typo="Typo.h6" Align="Align.Center" Class="mt-4">Activity Launcher</MudText>
             <NavMenu />
         </MudDrawer>
     }
