--- a/Solution/ActivityLauncher.Client/_Imports.razor
+++ b/Solution/ActivityLauncher.Client/_Imports.razor
@@ -18,7 +18,9 @@
 
 @using ActivityLauncher.Client.Locales
 
+@using ActivityLauncher.Domain.Common.Extensions
 @using ActivityLauncher.Domain.Enums
+@using ActivityLauncher.Domain.Interfaces
 @using ActivityLauncher.Domain.Model
 @using ActivityLauncher.Domain.Model.Tasks
 @using ActivityLauncher.Domain.Model.Terminal
